openshift/projects/openshift-infra/routes/hawkular-metrics.yml
apiVersion: v1
kind: Route
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Route","metadata":{"annotations":{},"labels":{"metrics-infra":"hawkular-metrics"},"name":"hawkular-metrics","namespace":"openshift-infra"},"spec":{"host":"hawkular-metrics.apps01.amosdemo.io","tls":{"destinationCACertificate":"-----BEGIN CERTIFICATE-----\nMIIC5jCCAc6gAwIBAgIBATANBgkqhkiG9w0BAQsFADAkMSIwIAYDVQQDDBltZXRy\naWNzLXNpZ25lckAxNTQyNzg4NjIyMB4XDTE4MTEyMTA4MjQwNloXDTIzMTEyMDA4\nMjQwN1owJDEiMCAGA1UEAwwZbWV0cmljcy1zaWduZXJAMTU0Mjc4ODYyMjCCASIw\nDQYJKoZIhvcNA [...]
  creationTimestamp: null
  labels:
    metrics-infra: hawkular-metrics
  name: hawkular-metrics
spec:
  host: hawkular-metrics.apps01.amosdemo.io
  tls:
    destinationCACertificate: |
      -----BEGIN CERTIFICATE-----
      MIIC5jCCAc6gAwIBAgIBATANBgkqhkiG9w0BAQsFADAkMSIwIAYDVQQDDBltZXRy
[...]
      ArskfRBM/u1pgZRM8WPozDs67iXuWVmg4LI=
      -----END CERTIFICATE-----
    termination: reencrypt
  to:
    kind: Service
    name: hawkular-metrics
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: 2018-11-01T09:58:55Z
      status: "True"
      type: Admitted
    host: hawkular-metrics.apps01.amosdemo.io
    routerName: router
    wildcardPolicy: None
